fixes and tweaks to spacing

--- a/src/webui/src/sass/main.scss
+++ b/src/webui/src/sass/main.scss
@@ -4,6 +4,37 @@
 $full: "Work Sans", sans-serif;
 $slim: "Source Sans Pro", sans-serif;
 
+$blue: hsl(205,45,35);
+$blue-75: hsla(hue($blue),saturation($blue),lightness($blue),0.75);
+$blue-50: hsla(hue($blue),saturation($blue),lightness($blue),0.50);
+$blue-25: hsla(hue($blue),saturation($blue),lightness($blue),0.25);
+$blue-05: hsla(hue($blue),saturation($blue),lightness($blue),0.05);
+
+$green: hsl(175,45,35);
+$green-75: hsla(hue($green),saturation($green),lightness($green),0.75);
+$green-50: hsla(hue($green),saturation($green),lightness($green),0.50);
+$green-25: hsla(hue($green),saturation($green),lightness($green),0.25);
+$green-05: hsla(hue($green),saturation($green),lightness($green),0.05);
+
+$purple: hsl(235,45,35);
+$purple-75: hsla(hue($purple),saturation($purple),lightness($purple),0.75);
+$purple-50: hsla(hue($purple),saturation($purple),lightness($purple),0.50);
+$purple-25: hsla(hue($purple),saturation($purple),lightness($purple),0.25);
+$purple-05: hsla(hue($purple),saturation($purple),lightness($purple),0.05);
+
+$pink: hsl(275,45,35);
+$pink-75: hsla(hue($pink),saturation($pink),lightness($pink),0.75);
+$pink-50: hsla(hue($pink),saturation($pink),lightness($pink),0.50);
+$pink-25: hsla(hue($pink),saturation($pink),lightness($pink),0.25);
+$pink-05: hsla(hue($pink),saturation($pink),lightness($pink),0.05);
+
+$black: hsl(0,0,0);
+$black-75: hsla(hue($black),saturation($black),lightness($black),0.75);
+$black-50: hsla(hue($black),saturation($black),lightness($black),0.50);
+$black-25: hsla(hue($black),saturation($black),lightness($black),0.25);
+$black-05: hsla(hue($black),saturation($black),lightness($black),0.05);
+
+
 $content-black: hsla(0,0,0,1);
 $header-black: hsla(0,0,0,0.8);
 $button-black: hsla(0,0,0,0.75);
@@ -12,10 +43,10 @@ $icon-half-black: hsla(0,0,0,0.25);
 $hover-black: hsla(0,0,0,0.1);
 $tint-black: hsla(0,0,0,0.05);
 
-$blue: hsla(205,35,45,1);
-$blue-75: hsla(205,35,45,0.75);
-$blue-25: hsla(205,35,45,0.25);
-$blue-05: hsla(205,15,45,0.10);
+// $blue: hsla(205,45,35,1);
+// $blue-75: hsla(205,45,35,0.75);
+// $blue-25: hsla(205,45,35,0.25);
+// $blue-05: hsla(205,15,45,0.10);
 $blue-sidebar: hsla(205,35,45,0.5);
 $blue-button: hsla(205,35,45,1);
 $blue-radio: hsla(205,35,75,1);
@@ -24,7 +55,7 @@ $blue-button-tint: hsla(205,35,45,0.25);
 $blue-tint: hsla(205,35,45,0.05);
 .blue-text { color: $blue; }
 
-$green: hsla(140,35,45,1);
+// $green: hsla(140,35,45,1);
 $green-sidebar: hsla(140,35,45,0.5);
 $green-button: hsla(140,35,45,1);
 $green-radio: hsla(140,35,75,1);
